base/src/test/resources/failure/patterns/issue354-reduce.aya.txt
In file $FILE:15:4 ->

  11 | open data Int : Set
  12 |  | pos Nat
  13 |  | neg Nat { | n => pos (addN n n) }
                      ^-----------------^ relevant condition
  14 | 
  15 | def abs (n : Int) : Nat
  16 |  | pos (suc n) => suc zero
  17 |  | pos zero => suc zero
  18 |  | neg n => zero
          ^-----------^ substituted to `zero`
  
Error: The 3rd clause matches on a constructor with condition(s). When checking the 1st condition, we failed to even reduce one of the clause(s) to check condition
What are you doing?
